# pybezier

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py  setup.sh
.github/workflows/: build_and_test.yml
data/: 2023-05-11_15-11-56_gpx測試.gpx
examples/: draw.py  draw2.py  draw3.py  fit_gpx.py  fit_gpx_multiple_bezier.py  fit_sample.py  gpx.py  lm.py  multi_curve.py  plot_bezier.py  rdp.py  sampled_points.py  test.py  uniform_distance_sampler.py
pybezier/: CMakeLists.txt  __init__.py  bezier.cpp  bezier.hpp  bezier_curve.py  curve.hpp  fit.cpp  fit.hpp  multi_curve.cpp  pybind.cpp  sampled_curve.cpp  uniform_distance_sampler.cpp
pybezier/cpp/: CMakeLists.txt  bezier.cpp  pybind.cpp
tests/: sampled_curve.py  test_bezier.py  test_fit.py  test_multi_curve.py  test_uniform_distance_sampler.py  uniform_distance_sampler.py
